@@ -73,6 +73,7 @@ Fixes
   * Fixed HydrogenBondAnalysis to return atom indices rather than atom ids (PR #2572).
     Fixed the check for bond information in the _get_dh_pairs method (Issue #2396).
   * Added missing selection module to leaflet.py (Issue #2612)
+  * Contact Analysis class respects PBC (Issue #2368)
 
 Enhancements
   * Added new density.DensityAnalysis (Issue #2502)
